--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Weather</title>
+    <title>Weather App</title>
   </head>
   <body>
-
+    <label for="cityInput">City Name: </label>
+    <input id="cityInput" type="text" name="cityName" >
   </body>
 </html>
